--- a/NLP/notebook_EDA.ipynb
+++ b/NLP/notebook_EDA.ipynb
@@ -2,6 +2,23 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "d9bf1853",
+   "metadata": {},
+   "source": [
+    "## Contexte"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2b0904ee",
+   "metadata": {},
+   "source": [
+    "Présentation des données qui serviront à créer un model IA capable de détecter les email SPAM.  \n",
+    "Nous allons voir qu'il est possible de faire aussi un modèle en Machine Learning plutôt efficace qui notre équipe a préféré partir sur un projet en Deep Learning, qui est présenté en détail dans \"notebook_model\".  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "2753aa2b",
    "metadata": {},
    "source": [
@@ -34,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "id": "a1e3dd9e",
    "metadata": {},
    "outputs": [],
@@ -66,9 +83,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "id": "7a648d73",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -198,7 +217,7 @@
        "[5796 rows x 3 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -210,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "id": "0428760b",
    "metadata": {},
    "outputs": [
@@ -220,7 +239,7 @@
        "(5796, 3)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -232,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "id": "e7023b6f",
    "metadata": {},
    "outputs": [
@@ -245,7 +264,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,10 +275,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "c654d464",
+   "cell_type": "markdown",
+   "id": "2cb789ed",
    "metadata": {},
+   "source": [
+    "Nous avons **3 colonnes pour 5796 lignes avec 0 valeurs nulls.**  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "c654d464",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -284,8 +313,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "aab81e18",
+   "metadata": {},
+   "source": [
+    "En nous intéressant à la colonne **CATEGORY**, notre target, nous constatons un déséquilibre de la target, avec davantage de 0 (non-spam) que de 1 (spam).  "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "id": "d4ff16f6",
    "metadata": {},
    "outputs": [
@@ -295,7 +332,7 @@
        "array([1, 0], dtype=int64)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,9 +343,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "be2f7d65",
+   "execution_count": 8,
+   "id": "a8809608",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    3900\n",
+       "1    1896\n",
+       "Name: CATEGORY, dtype: int64"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[\"CATEGORY\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "60ab1557",
    "metadata": {},
+   "source": [
+    "Nous pouvons mieux nous en rendre compte avec quelque plot en guise de visuel.  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "be2f7d65",
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -324,32 +396,35 @@
     }
    ],
    "source": [
+    "#form target\n",
+    "\n",
     "sns.countplot(df[\"CATEGORY\"])\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "a8809608",
+   "execution_count": null,
+   "id": "0af5beb9",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0    3900\n",
-       "1    1896\n",
-       "Name: CATEGORY, dtype: int64"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df[\"CATEGORY\"].value_counts()"
-   ]
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e4b730aa",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e59e843a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -361,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "id": "fa6215e1",
    "metadata": {},
    "outputs": [],
@@ -379,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "id": "91973afd",
    "metadata": {
     "scrolled": false
@@ -513,7 +588,7 @@
        "[5796 rows x 3 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -524,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "id": "42a64fc9",
    "metadata": {},
    "outputs": [
@@ -549,7 +624,7 @@
        "True"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -562,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 12,
    "id": "631cb093",
    "metadata": {},
    "outputs": [
@@ -581,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
    "id": "1df5d21d",
    "metadata": {},
    "outputs": [
@@ -713,7 +788,7 @@
        "[5796 rows x 3 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -724,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 14,
    "id": "c4ce83ec",
    "metadata": {},
    "outputs": [],
@@ -743,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 15,
    "id": "198eda94",
    "metadata": {},
    "outputs": [
@@ -1753,7 +1828,7 @@
        " ...]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1772,7 +1847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 16,
    "id": "019fe822",
    "metadata": {},
    "outputs": [],
@@ -1785,7 +1860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 17,
    "id": "a7b4eb58",
    "metadata": {},
    "outputs": [
@@ -1796,7 +1871,7 @@
        "\twith 2806809 stored elements in Compressed Sparse Row format>"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1807,7 +1882,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 22,
+   "id": "edc89d7d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       1\n",
+       "1       1\n",
+       "2       1\n",
+       "3       1\n",
+       "4       1\n",
+       "       ..\n",
+       "5791    0\n",
+       "5792    0\n",
+       "5793    0\n",
+       "5794    0\n",
+       "5795    0\n",
+       "Name: CATEGORY, Length: 5796, dtype: int64"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "id": "f6718e3f",
    "metadata": {},
    "outputs": [],
@@ -1818,7 +1925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 19,
    "id": "174e65d5",
    "metadata": {},
    "outputs": [
@@ -1926,7 +2033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "id": "3c3f1096",
    "metadata": {},
    "outputs": [
