--- a/NLP/notebook_model.ipynb
+++ b/NLP/notebook_model.ipynb
@@ -398,14 +398,27 @@
    "id": "91249a05",
    "metadata": {},
    "source": [
-    "**Embedding**"
+    "**Embedding** est un espace dit \"peu dimensionnel\" dans lequel nous pouvons traduire des vecteurs à haute dimension. Cela facilite l'apprentissage automatique de notre IA sur des entrées de grande taille. L'avantage de ce modèle est qu'il pourra apprendre et être réutilisé dans plusieurs modèles (donc sur d'autres jeux de données)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "66905213",
+   "metadata": {},
+   "source": [
+    "Dans la cellule ci-après, nous préparons nos layers pour le model, avec en premier layers le Embedding avec 64 dimensions.  \n",
+    "Nous lui donnons ensuite un Flatten pour applatir nos données et une sortie avec une outputs avec l'activation \"sigmoid\".  \n",
+    "\n",
+    "Le tout est compilé avec le model, à qui nous donnons d'autres hypers paramètres : Adam, binary_crossentropy et l'accuracy en metrics.  "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 48,
    "id": "c06d346c",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -456,6 +469,14 @@
     "\n",
     "\n",
     "print(model.summary())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e9a20ac7",
+   "metadata": {},
+   "source": [
+    "Le model est ensuite prêt à s'entraîner, on lui applique donc le .fit.  "
    ]
   },
   {
@@ -517,6 +538,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "65738d5f",
+   "metadata": {},
+   "source": [
+    "Nous pouvons voir ici les résultats de notre modèle.  "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 50,
    "id": "8187030d",
@@ -551,6 +580,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0a0398fb",
+   "metadata": {},
+   "source": [
+    "Notre modèle est très bon. Nous décidons de le sauvegarder avec cette commande.  "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 51,
    "id": "8bc0bc90",
@@ -568,6 +605,15 @@
    "metadata": {},
    "source": [
     "## Code refactored for application"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c1e27bc2",
+   "metadata": {},
+   "source": [
+    "Ici vous trouverez le code refactoring de notre preprocessing et de notre modèle pour en faire une application.  \n",
+    "Le app.py se trouvant désormais dans notre dossier du projet nous permets de créer un premier jet d'une interface utilisateur, servant à repérer si un mail est un spam ou non !  "
    ]
   },
   {
