--- a/NLP/notebook_predict.ipynb
+++ b/NLP/notebook_predict.ipynb
@@ -21,7 +21,7 @@
     "Le **NLP** est une technologie d’intelligence artificielle visant à permettre aux ordinateurs de comprendre le langage humain.\n",
     "L’objectif de cette technologie est de permettre aux machines de lire, de déchiffrer, de comprendre et de donner sens au langage humain.  \n",
     "\n",
-    "Nous allons vous montrer une modèle qui possède une couche d'**Embedding**. Il s'agit d'un espace dit \"peu dimensionnel\" dans lequel nous pouvon traduire traduire des vecteurs à haute dimension. Cela facilite l'apprentissage automatique de notre IA sur des entrées de grande taille. L'avantage de ce modèle est qu'il pourra apprendre et être réutilisé dans plusieurs modèles (donc sur d'autres jeux de données).  \n",
+    "Nous allons vous montrer une modèle qui possède une couche d'**Embedding**. Il s'agit d'un espace dit \"peu dimensionnel\" dans lequel nous pouvons traduire des vecteurs à haute dimension. Cela facilite l'apprentissage automatique de notre IA sur des entrées de grande taille. L'avantage de ce modèle est qu'il pourra apprendre et être réutilisé dans plusieurs modèles (donc sur d'autres jeux de données).  \n",
     "\n",
     "Pour notre projet nous avons à notre disposition une base de données comportant des mails, classé par 1 ou 0.\n",
     "* 0 sont les mail non-spam.  \n",
