--- a/NLP/notebook_model_machine_learning.ipynb
+++ b/NLP/notebook_model_machine_learning.ipynb
@@ -280,6 +280,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "cdd48584",
+   "metadata": {},
+   "source": [
+    "Nous procédons à un nettoyage des textes de la colonne MESSAGE.  "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "id": "eec3376e",
@@ -302,7 +310,7 @@
    "execution_count": 14,
    "id": "99b6bab5",
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -467,6 +475,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e5d0d954",
+   "metadata": {},
+   "source": [
+    "NLTK va séparer les mots et appliquer le stopwords, ainsi que d'autres fonctions pour reconnaîre les mots et leurs contextes.  "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "id": "452082be",
@@ -507,7 +523,9 @@
    "cell_type": "code",
    "execution_count": 16,
    "id": "d04b6c53",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -608,6 +626,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2ebe28e1",
+   "metadata": {},
+   "source": [
+    "Nous utilisons la technique Lemmatizer avec WordNetLemmatizer(). La lemmatisation est le processus de regroupement des différentes formes fléchies d'un mot afin qu'elles puissent être analysées comme un seul élément. La lemmatisation est similaire à la radicalisation mais elle apporte un contexte aux mots.  \n",
+    "La boucle va appliquer sur chaque mot la fonction stopword.  "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 17,
    "id": "4425d832",
@@ -624,6 +651,14 @@
     "    message = [lemmatizer.lemmatize(word) for word in message]\n",
     "    message = ' '.join(message)\n",
     "    corpus.append(message)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "96b32b08",
+   "metadata": {},
+   "source": [
+    "Nous avons enfin notre corpus de mots (un vecteur de mots)  "
    ]
   },
   {
@@ -1656,6 +1691,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#save corpus in pickle\n",
+    "\n",
     "# pickle.dump(corpus,open('corpus.pkl','wb'))"
    ]
   },
@@ -1665,6 +1702,14 @@
    "metadata": {},
    "source": [
     "## (Preprocessing) Applying tfidf"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "310d7abd",
+   "metadata": {},
+   "source": [
+    "TfidfVectorizer de Scikit-learn permet de revectoriser les mots.  "
    ]
   },
   {
@@ -1704,7 +1749,9 @@
    "cell_type": "code",
    "execution_count": 31,
    "id": "3bf6bfb9",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1719,6 +1766,14 @@
    ],
    "source": [
     "y.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1e711e9b",
+   "metadata": {},
+   "source": [
+    "Nous séparons nos données pour avoir 80% de données en training et 20% en testing.  "
    ]
   },
   {
@@ -1808,10 +1863,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "56a7956a",
+   "metadata": {},
+   "source": [
+    "LightGBM, abréviation de Light Gradient Boosting Machine, est un framework d'amplification de gradient distribué gratuit et open source pour l'apprentissage automatique développé à l'origine par Microsoft.   \n",
+    "Il fonctionne comme un modèle de classification.  "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 65,
    "id": "58c00538",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1859,6 +1925,24 @@
     "sns.heatmap(cm, annot=True)\n",
     "print(\"Accuracy of LightGBM Model:\", acc*100,\"%\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f28fe319",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7f79baf2",
+   "metadata": {},
+   "source": [
+    "Nos résultats sont très bons ! Nous avons un score Accuracy de 98. C'est pas mal pour pouvoir nous essayer dans la création de notre future application.  \n",
+    "\n",
+    "Dans les lignes de codes suivantes, nous avons effectué différents tests avec d'autres modèles, où les résultats sont plutôt variables.  "
    ]
   },
   {
@@ -2044,22 +2128,6 @@
     "# pickle.dump(tfidf,open('vectorizer.pkl','wb'))\n",
     "# pickle.dump(classifier,open('model.pkl','wb'))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bcc56268",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "52af35ee",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
