--- a/NLP/notebook_predict_ML.ipynb
+++ b/NLP/notebook_predict_ML.ipynb
@@ -21,15 +21,23 @@
     "Le **NLP** est une technologie d’intelligence artificielle visant à permettre aux ordinateurs de comprendre le langage humain.\n",
     "L’objectif de cette technologie est de permettre aux machines de lire, de déchiffrer, de comprendre et de donner sens au langage humain.  \n",
     "\n",
-    "Nous allons vous montrer une modèle qui possède une couche d'**Embedding**. Il s'agit d'un espace dit \"peu dimensionnel\" dans lequel nous pouvons traduire des vecteurs à haute dimension. Cela facilite l'apprentissage automatique de notre IA sur des entrées de grande taille. L'avantage de ce modèle est qu'il pourra apprendre et être réutilisé dans plusieurs modèles (donc sur d'autres jeux de données).  \n",
+    "Il existe une version de notre projet où notre modèle utilise une méthode en Deep Learning, notamment une couche **d'Embedding**. Il s'agit d'un espace dit \"peu dimensionnel\" dans lequel nous pouvons traduire des vecteurs à haute dimension. Cela facilite l'apprentissage automatique de notre IA sur des entrées de grande taille. L'avantage de ce modèle est qu'il pourra apprendre et être réutilisé dans plusieurs modèles (donc sur d'autres jeux de données). \n",
     "\n",
-    "Pour notre projet nous avons à notre disposition une base de données comportant des mails, classé par 1 ou 0.\n",
+    "Le projet présenté ici est finalement celui qui est pour le moment retenu car il a été plus simple de le développer et d'en faire l'interface utilisateur voulue par l'équipe !  \n",
+    "\n",
+    "Nous retrouvons des méthodes en Machine Learning, notamment **TfidfVectorizer** de **Scikit-learn**, qui permet de revectoriser nos données.  \n",
+    "\n",
+    "Au préalable, les données ont été nettoyées et passées sous **NLTK** pour qu'il identifie les mots anglais. Nous avons ensuite utilisé la technique **Lemmatizer** avec **WordNetLemmatizer()**. La lemmatisation est le processus de regroupement des différentes formes fléchies d'un mot afin qu'elles puissent être analysées comme un seul élément. La lemmatisation est similaire à la radicalisation mais elle apporte un contexte aux mots.  \n",
+    "\n",
+    "C'est ainsi que nous avons pu obtenir notre corpus de mots que nous donnons à notre modèle pour qu'il puisse s'entraîner.  \n",
+    "\n",
+    "Pour notre projet nous avons à notre disposition une base de données comportant des mails, classé par 1 ou 0.  \n",
     "* 0 sont les mail non-spam.  \n",
     "* 1 sont les mail considérés comme des spam.  \n",
     "\n",
-    "Dans ce notebook protocole/predict, vous pourrez suivre les étapes (Step by steps) pour pouvoir utiliser notre modèle avec différentes données.\n",
+    "Dans ce notebook protocole/predict, vous pourrez suivre les étapes (Step by steps) pour pouvoir utiliser notre modèle avec différentes données.  \n",
     "\n",
-    "Allons-y !"
+    "Allons-y !  "
    ]
   },
   {
